[package]
name = "kagiyama"
description = "Opinionated application monitoring framework"
version = "0.0.1"
edition = "2021"

license = "MIT"
readme = "README.md"

homepage = "https://github.com/DanNixon/kagiyama"
repository = "https://github.com/DanNixon/kagiyama"

[dependencies]
anyhow = "1.0.57"
hyper = { version = "0.14.20", features = ["server", "http1", "tcp"] }
log = "0.4.17"
prometheus-client = "0.18.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
strum = "0.24.1"
strum_macros = "0.24.3"
tokio = { version = "1.19.2", features = ["full"] }
tower = { version = "0.4.13", features = ["make"] }
